v1.1.0/modules/schema/pages/class/WindContPType3IEC.adoc
= `WindContPType3IEC`
:toclevels: 4


+++P control model type 3.
Reference: IEC 61400-27-1:2015, 5.6.5.4.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindContPType3IEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`WindContPType3IEC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
//| [[slots_table.WindDynamicsLookupTable]]<<WindDynamicsLookupTable,`WindDynamicsLookupTable`>>
| 1..* +
xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]
| +++The wind dynamics lookup table associated with this P control type 3 model.+++
| _n/a_

| <<WindTurbineType3IEC,`WindTurbineType3IEC`>>
//| [[slots_table.WindTurbineType3IEC]]<<WindTurbineType3IEC,`WindTurbineType3IEC`>>
| 1 +
xref::class/WindTurbineType3IEC.adoc[`WindTurbineType3IEC`]
| +++Wind turbine type 3 model with which this wind control P type 3 model is associated.+++
| _n/a_

| <<dpmax,`dpmax`>>
//| [[slots_table.dpmax]]<<dpmax,`dpmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum wind turbine power ramp rate (<i>dp</i><i><sub>max</sub></i>). It is a type-dependent parameter.+++
| _n/a_

| <<dprefmax,`dprefmax`>>
//| [[slots_table.dprefmax]]<<dprefmax,`dprefmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum ramp rate of wind turbine reference power (<i>dp</i><i><sub>refmax</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<dprefmin,`dprefmin`>>
//| [[slots_table.dprefmin]]<<dprefmin,`dprefmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum ramp rate of wind turbine reference power (<i>dp</i><i><sub>refmin</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<dthetamax,`dthetamax`>>
//| [[slots_table.dthetamax]]<<dthetamax,`dthetamax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Ramp limitation of torque, required in some grid codes (<i>dt</i><i><sub>max</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<dthetamaxuvrt,`dthetamaxuvrt`>>
//| [[slots_table.dthetamaxuvrt]]<<dthetamaxuvrt,`dthetamaxuvrt`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Limitation of torque rise rate during UVRT (<i>dtheta</i><i><sub>maxUVRT</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<kdtd,`kdtd`>>
//| [[slots_table.kdtd]]<<kdtd,`kdtd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain for active drive train damping (<i>K</i><i><sub>DTD</sub></i>). It is a type-dependent parameter.+++
| _n/a_

| <<kip,`kip`>>
//| [[slots_table.kip]]<<kip,`kip`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PI controller integration parameter (<i>K</i><sub>Ip</sub>). It is a type-dependent parameter.+++
| _n/a_

| <<kpp,`kpp`>>
//| [[slots_table.kpp]]<<kpp,`kpp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PI controller proportional gain (<i>K</i><sub>Pp</sub>). It is a type-dependent parameter.+++
| _n/a_

| <<mpuvrt,`mpuvrt`>>
//| [[slots_table.mpuvrt]]<<mpuvrt,`mpuvrt`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Enable UVRT power control mode (<i>M</i><i><sub>pUVRT</sub></i><sub>)</sub>.  It is a project-dependent parameter.
true =...+++
| _n/a_

| <<omegadtd,`omegadtd`>>
//| [[slots_table.omegadtd]]<<omegadtd,`omegadtd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Active drive train damping frequency (<i>omega</i><i><sub>DTD</sub></i>). It can be calculated from two mass model...+++
| _n/a_

| <<omegaoffset,`omegaoffset`>>
//| [[slots_table.omegaoffset]]<<omegaoffset,`omegaoffset`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Offset to reference value that limits controller action during rotor speed changes (<i>omega</i><i><sub>offset</sub></i>)....+++
| _n/a_

| <<pdtdmax,`pdtdmax`>>
//| [[slots_table.pdtdmax]]<<pdtdmax,`pdtdmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum active drive train damping power (<i>p</i><sub>DTDmax</sub>). It is a type-dependent parameter.+++
| _n/a_

| <<tdvs,`tdvs`>>
//| [[slots_table.tdvs]]<<tdvs,`tdvs`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time<sub> </sub>delay after deep voltage sags (<i>T</i><i><sub>DVS</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++
| _n/a_

| <<thetaemin,`thetaemin`>>
//| [[slots_table.thetaemin]]<<thetaemin,`thetaemin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum electrical generator torque (<i>t</i><sub>emin</sub>). It is a type-dependent parameter.+++
| _n/a_

| <<thetauscale,`thetauscale`>>
//| [[slots_table.thetauscale]]<<thetauscale,`thetauscale`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage scaling factor of reset-torque (<i>t</i><sub>uscale</sub>). It is a project-dependent parameter.+++
| _n/a_

| <<tomegafiltp3,`tomegafiltp3`>>
//| [[slots_table.tomegafiltp3]]<<tomegafiltp3,`tomegafiltp3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for generator speed measurement (<i>T</i><sub>omegafiltp3</sub>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<tomegaref,`tomegaref`>>
//| [[slots_table.tomegaref]]<<tomegaref,`tomegaref`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant in speed reference filter (<i>T</i><sub>omega,ref</sub>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<tpfiltp3,`tpfiltp3`>>
//| [[slots_table.tpfiltp3]]<<tpfiltp3,`tpfiltp3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for power measurement (<i>T</i><sub>pfiltp3</sub>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<tpord,`tpord`>>
//| [[slots_table.tpord]]<<tpord,`tpord`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Time constant in power order lag (<i>T</i><sub>pord</sub>). It is a type-dependent parameter.+++
| _n/a_

| <<tufiltp3,`tufiltp3`>>
//| [[slots_table.tufiltp3]]<<tufiltp3,`tufiltp3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant for voltage measurement (<i>T</i><sub>ufiltp3</sub>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<udvs,`udvs`>>
//| [[slots_table.udvs]]<<udvs,`udvs`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage limit for hold UVRT status after deep voltage sags (<i>u</i><i><sub>DVS</sub></i>). It is a project-dependent parameter.+++
| _n/a_

| <<updip,`updip`>>
//| [[slots_table.updip]]<<updip,`updip`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Voltage dip threshold for P-control (<i>u</i><sub>Pdip</sub>).  Part of turbine control, often different (e.g 0.8) from...+++
| _n/a_

| <<zeta,`zeta`>>
//| [[slots_table.zeta]]<<zeta,`zeta`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Coefficient for active drive train damping (<i>zeta</i>). It is a type-dependent parameter.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dpmax]
=== `dpmax`
+++Maximum wind turbine power ramp rate (<i>dp</i><i><sub>max</sub></i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.dpmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dpmax,&#10548;>>
--
////


//[discrete]
[#dprefmax]
=== `dprefmax`
+++Maximum ramp rate of wind turbine reference power (<i>dp</i><i><sub>refmax</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.dprefmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dprefmax,&#10548;>>
--
////


//[discrete]
[#dprefmin]
=== `dprefmin`
+++Minimum ramp rate of wind turbine reference power (<i>dp</i><i><sub>refmin</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.dprefmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dprefmin,&#10548;>>
--
////


//[discrete]
[#dthetamax]
=== `dthetamax`
+++Ramp limitation of torque, required in some grid codes (<i>dt</i><i><sub>max</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.dthetamax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dthetamax,&#10548;>>
--
////


//[discrete]
[#dthetamaxuvrt]
=== `dthetamaxuvrt`
+++Limitation of torque rise rate during UVRT (<i>dtheta</i><i><sub>maxUVRT</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.dthetamaxuvrt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dthetamaxuvrt,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kdtd]
=== `kdtd`
+++Gain for active drive train damping (<i>K</i><i><sub>DTD</sub></i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.kdtd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kdtd,&#10548;>>
--
////


//[discrete]
[#kip]
=== `kip`
+++PI controller integration parameter (<i>K</i><sub>Ip</sub>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.kip`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kip,&#10548;>>
--
////


//[discrete]
[#kpp]
=== `kpp`
+++PI controller proportional gain (<i>K</i><sub>Pp</sub>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.kpp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpp,&#10548;>>
--
////


//[discrete]
[#mpuvrt]
=== `mpuvrt`
+++Enable UVRT power control mode (<i>M</i><i><sub>pUVRT</sub></i><sub>)</sub>.  It is a project-dependent parameter.
true = voltage control (1 in the IEC model)
false = reactive power control (0 in the IEC model).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.mpuvrt`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.mpuvrt,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#omegadtd]
=== `omegadtd`
+++Active drive train damping frequency (<i>omega</i><i><sub>DTD</sub></i>). It can be calculated from two mass model parameters. It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.omegadtd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.omegadtd,&#10548;>>
--
////


//[discrete]
[#omegaoffset]
=== `omegaoffset`
+++Offset to reference value that limits controller action during rotor speed changes (<i>omega</i><i><sub>offset</sub></i>). It is a case-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.omegaoffset`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.omegaoffset,&#10548;>>
--
////


//[discrete]
[#pdtdmax]
=== `pdtdmax`
+++Maximum active drive train damping power (<i>p</i><sub>DTDmax</sub>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.pdtdmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pdtdmax,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tdvs]
=== `tdvs`
+++Time<sub> </sub>delay after deep voltage sags (<i>T</i><i><sub>DVS</sub></i>) (&gt;= 0). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.tdvs`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tdvs,&#10548;>>
--
////


//[discrete]
[#thetaemin]
=== `thetaemin`
+++Minimum electrical generator torque (<i>t</i><sub>emin</sub>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.thetaemin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.thetaemin,&#10548;>>
--
////


//[discrete]
[#thetauscale]
=== `thetauscale`
+++Voltage scaling factor of reset-torque (<i>t</i><sub>uscale</sub>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.thetauscale`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.thetauscale,&#10548;>>
--
////


//[discrete]
[#tomegafiltp3]
=== `tomegafiltp3`
+++Filter time constant for generator speed measurement (<i>T</i><sub>omegafiltp3</sub>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.tomegafiltp3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tomegafiltp3,&#10548;>>
--
////


//[discrete]
[#tomegaref]
=== `tomegaref`
+++Time constant in speed reference filter (<i>T</i><sub>omega,ref</sub>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.tomegaref`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tomegaref,&#10548;>>
--
////


//[discrete]
[#tpfiltp3]
=== `tpfiltp3`
+++Filter time constant for power measurement (<i>T</i><sub>pfiltp3</sub>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.tpfiltp3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpfiltp3,&#10548;>>
--
////


//[discrete]
[#tpord]
=== `tpord`
+++Time constant in power order lag (<i>T</i><sub>pord</sub>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.tpord`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.tpord,&#10548;>>
--
////


//[discrete]
[#tufiltp3]
=== `tufiltp3`
+++Filter time constant for voltage measurement (<i>T</i><sub>ufiltp3</sub>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.tufiltp3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tufiltp3,&#10548;>>
--
////


//[discrete]
[#udvs]
=== `udvs`
+++Voltage limit for hold UVRT status after deep voltage sags (<i>u</i><i><sub>DVS</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.udvs`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.udvs,&#10548;>>
--
////


//[discrete]
[#updip]
=== `updip`
+++Voltage dip threshold for P-control (<i>u</i><sub>Pdip</sub>).  Part of turbine control, often different (e.g 0.8) from converter thresholds. It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.updip`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.updip,&#10548;>>
--
////


//[discrete]
[#WindDynamicsLookupTable]
=== `WindDynamicsLookupTable`
+++The wind dynamics lookup table associated with this P control type 3 model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.WindDynamicsLookupTable`
| Cardinality
| 1..*
| Type
| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`]


|===

////
[.text-left]
--
<<slots_table.WindDynamicsLookupTable,&#10548;>>
--
////


//[discrete]
[#WindTurbineType3IEC]
=== `WindTurbineType3IEC`
+++Wind turbine type 3 model with which this wind control P type 3 model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.WindTurbineType3IEC`
| Cardinality
| 1
| Type
| xref::class/WindTurbineType3IEC.adoc[`WindTurbineType3IEC`]


|===

////
[.text-left]
--
<<slots_table.WindTurbineType3IEC,&#10548;>>
--
////


//[discrete]
[#zeta]
=== `zeta`
+++Coefficient for active drive train damping (<i>zeta</i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindContPType3IEC.zeta`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.zeta,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/WindDynamicsLookupTable.adoc[`WindDynamicsLookupTable`] | xref::class/WindDynamicsLookupTable.adoc#WindContPType3IEC[`WindContPType3IEC`]



| xref::class/WindTurbineType3IEC.adoc[`WindTurbineType3IEC`] | xref::class/WindTurbineType3IEC.adoc#WindContPType3IEC[`WindContPType3IEC`]


|===

